tests/parser-test-files/bad-files/define-type.13.coal
(package test-package)

(define-type T
  "This is a docstring"
  "This is also a docstring")
